cabal-version:      2.4
name:               CS438SearchAlgorithmsHW1
version:            0.1.0.0
synopsis:           Implementation of search algorithms in haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/BrianTipton1/CS438SearchAlgorithmsHW1

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Brian Tipton
maintainer:         briantiptondev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable CS438SearchAlgorithmsHW1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      filepath
    hs-source-dirs:   app
    default-language: Haskell2010
